ema-generics/test/type-errors/Spec.hs
module Main where

-- | Filler module so cabal will be happy that there's a main-is
main :: IO ()
main = pure ()
